# bottle_classification_task

./: CMakeLists.txt  README.md
include/: perception.h  perception.h~  test.h  test.h~
src/: main.cpp  main.cpp~  polycolor.cpp  polycolor.cpp~  space.cpp  space.cpp~  suma.cpp  suma.cpp~
